changes to gallery

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -529,7 +529,8 @@ footer.main-footer .footer__wwf .inner-container img {
 footer.main-footer .footer__links {
 	position: relative;
 	background: #282828;
-	height: 150px
+	height: 150px;
+
 }
 
 footer.main-footer .footer__links ul {
