changes to text from marc

--- a/assets/styles/style2.css
+++ b/assets/styles/style2.css
@@ -1447,7 +1447,7 @@ div.footer__wwf div.container ul li {
     height: 300px;
     object-fit: scale-down;
 }
-p.hangingIndent {
+li.hangingIndent {
     text-indent: -28px;
     padding-left: 28px;
 }
