--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,161 +1,162 @@
-.pl90{padding-left: 90px;}
-.main-content{
-	margin:40px auto;
-	width:60%;
-	clear:both;
+.pl90 {
+    padding-left: 90px;
 }
-.main-content hr{
-	margin-top: 20px;
+
+.main-content {
+    margin: 40px auto;
+    width: 60%;
+    clear: both;
+}
+
+.main-content hr {
+    margin-top: 20px;
     margin-bottom: 20px;
     border: 0;
     border-top: 1px solid #eee;
 }
+
 .content-row {
-	margin:15px 0;
-	clear: both;
+    margin: 15px 0;
+    clear: both;
 }
+
 .content-column {
-	margin:20px 0;
-	float:left;
+    margin: 20px 0;
+    float: left;
 }
-.content-column.img{
-	text-align:center;
-}
-.content-column.content{
 
+.content-column.img {
+    text-align: center;
 }
+
+.content-column.content {}
+
 .content-column.img img {
-	width:100%;
-	max-width:200px;
-	max-height:125px;
-	margin:auto;
+    width: 100%;
+    max-width: 200px;
+    max-height: 125px;
+    margin: auto;
 }
 
-
-.sponsor{
-	clear:both;
-	text-align:center;
-	padding-top:40px;
+.sponsor {
+    clear: both;
+    text-align: center;
+    padding-top: 40px;
 }
 
 
 /******************************Media Query*********************************/
 
-
-@media screen and (max-width : 320px){
-.content-column {
-	width:100%;
-}
-}
-
-@media screen and (min-width : 321px) and  (max-width: 480px){
-.content-column {
-	width:100%;
-}
-.top-image {
-	display: none;
-}
+@media screen and (max-width: 320px) {
+    .content-column {
+        width: 100%;
+    }
 }
 
-@media screen and (min-width : 481px) and  (max-width: 640px){
-.content-column {
-	width:50%;
-}
-}
-
-@media screen and (min-width : 641px) and (max-width : 768px){
-.content-column {
-	width:50%;
-}
+@media screen and (min-width: 321px) and (max-width: 480px) {
+    .content-column {
+        width: 100%;
+    }
+    .top-image {
+        display: none;
+    }
 }
 
-@media screen and (min-width : 769px) and (max-width : 1024px){
-.content-column {
-	width:25%;
-}
-}
-
-@media screen and (min-width : 1025px) and (max-width : 1224px){
-.content-column {
-	width:25%;
-}
+@media screen and (min-width: 481px) and (max-width: 640px) {
+    .content-column {
+        width: 50%;
+    }
 }
 
-@media screen and (min-width : 1225px){
-.content-column {
-	width:25%;
+@media screen and (min-width: 641px) and (max-width: 768px) {
+    .content-column {
+        width: 50%;
+    }
 }
+
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+    .content-column {
+        width: 25%;
+    }
+}
+
+@media screen and (min-width: 1025px) and (max-width: 1224px) {
+    .content-column {
+        width: 25%;
+    }
+}
+
+@media screen and (min-width: 1225px) {
+    .content-column {
+        width: 25%;
+    }
 }
 
 .centered {
-  position: absolute;
-  top: 25%;
-  left: 25%;
-  transform: translate(-50%, -50%);
-	
+    position: absolute;
+    top: 25%;
+    left: 25%;
+    transform: translate(-50%, -50%);
 }
 
-
-
 header {
-  position: relative;
-  background-color: black;
-  height: 75vh;
-  min-height: 25rem;
-  width: 100%;
-  overflow: hidden;
+    position: relative;
+    background-color: black;
+    height: 75vh;
+    min-height: 25rem;
+    width: 100%;
+    overflow: hidden;
 }
 
 header video {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  min-width: 100%;
-  min-height: 100%;
-  width: auto;
-  height: auto;
-  z-index: 0;
-  -ms-transform: translateX(-50%) translateY(-50%);
-  -moz-transform: translateX(-50%) translateY(-50%);
-  -webkit-transform: translateX(-50%) translateY(-50%);
-  transform: translateX(-50%) translateY(-50%);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    z-index: 0;
+    -ms-transform: translateX(-50%) translateY(-50%);
+    -moz-transform: translateX(-50%) translateY(-50%);
+    -webkit-transform: translateX(-50%) translateY(-50%);
+    transform: translateX(-50%) translateY(-50%);
 }
 
 header .container {
-  position: relative;
-  z-index: 2;
+    position: relative;
+    z-index: 2;
 }
 
 header .overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  background-color: black;
-  opacity: 0.5;
-  z-index: 1;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-color: black;
+    opacity: 0.5;
+    z-index: 1;
 }
 
 @media (pointer: coarse) and (hover: none) {
-  header {
-    background: url('https://source.unsplash.com/XT5OInaElMw/1600x900') black no-repeat center center scroll;
-  }
-  header video {
-    display: none;
-  }
+    header {
+        background: url('https://source.unsplash.com/XT5OInaElMw/1600x900') black no-repeat center center scroll;
+    }
+    header video {
+        display: none;
+    }
 }
 
-
 .centered {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .top-hero {
-  position: relative;
-  text-align: center;
-  color: white;
+    position: relative;
+    text-align: center;
+    color: white;
 }
